--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(Test VERSION 0.1.0)
+project(FilTer VERSION 0.1.0)
 
 include(CTest)
 enable_testing()
 
-
+add_subdirectory(src/ExtensionFilter/)
 find_package(Boost COMPONENTS system filesystem REQUIRED)
 
 if(Boost_FOUND)
@@ -13,14 +13,18 @@ endif()
 
 add_library(FileHandler src/FolderLocation/FileHandler.cpp
                         src/FileHolder/Holder.cpp)
-add_executable(Test src/main.cpp)
+add_library(Handler src/Handler/Handler.cpp)
+
+add_executable(FilTer src/main.cpp)
 
 target_link_libraries(FileHandler
   ${Boost_FILESYSTEM_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
 )
 
-target_link_libraries(Test FileHandler)
+target_link_libraries(Handler FileHandler Filter)
+
+target_link_libraries(FilTer Handler)
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
