--- a/.travis.yml
+++ b/.travis.yml
@@ -4,30 +4,6 @@ dist: trusty
 sudo: require
 os: linux
 
-matrix:
-  include:
-    - env: COMPILER=g++-6 BUILD=Debug STANDARD=14
-      compiler: gcc
-      addons:
-        apt:
-          update: true
-          sources:
-            - sourceline: 'ppa:mhier/libboost-latest'
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-6
-            - boost1.67
-    - env: COMPILER=g++-6 BUILD=Release STANDARD=14
-      compiler: gcc
-      addons:
-        apt:
-          update: true
-          sources:
-            - sourceline: 'ppa:mhier/libboost-latest'
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-6
-            - boost1.67
 
 addons:
   apt:
@@ -39,3 +15,6 @@ addons:
 script:
   - export CC=gcc-9
   - export CXX=g++-9
+
+
+  script: ./travis.sh
