--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,18 @@
 nguage: cpp
 sudo: required
 dist: trusty
+addons:
+    apt:
+     sources:
+      - boost-latest
+      - ubuntu-toolchain-r-test
+     packages:
+      - gcc-4.9
+      - g++-4.9
+      - libboost1.55-all-dev
 compiler:
   - clang
+  - g++
 os:
   - linux
 before_install:
