--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
       packages:
       - gcc-7
       - g++-7
-      - libboost1.55-all-dev
+      - libboost-all-dev
 compiler:
   - clang
   - g++
