--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,15 @@ include(CTest)
 enable_testing()
 
 add_subdirectory(src/ExtensionFilter/)
+add_subdirectory(src/ConsoleGui/)
+
+
+
+
+
 find_package(Boost COMPONENTS system filesystem REQUIRED)
 find_package(Threads)
+find_package(cxxopts REQUIRED)
 if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
 endif()
@@ -24,6 +31,7 @@ target_link_libraries(FileHandler
 target_link_libraries(Handler FileHandler Filter ${CMAKE_THREAD_LIBS_INIT})
 
 target_link_libraries(FilTer Handler)
+target_link_libraries(FilTer ConsoleGui)
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
